--- a/config_mozilla_profile/userChrome.css
+++ b/config_mozilla_profile/userChrome.css
@@ -704,7 +704,8 @@
 /* @import "./css/locationbar/ac_popup_megabar_result_separator.css"; /**/
 
 
-
+/* покраска контектного меню по "пкм" */
+@import "./css/webcontent/content_Area_Context_Menu_black.css";
 
 
 /************************************************************************************************/
